--- a/assignment/templates/assignment/index.html
+++ b/assignment/templates/assignment/index.html
@@ -21,12 +21,12 @@
                                 <option>2014级</option>
                             </select>
                             <br>
-                            <select class="form-control">
+                            <select class="form-control" id="college">
                                 <option>请选择学院</option>
                                 <option>信院</option>
                             </select>
                             <br>
-                            <select class="form-control">
+                            <select class="form-control" id="department">
                                 <option>请选择专业</option>
                                 <option>计算机</option>
                             </select>
@@ -72,4 +72,7 @@
             </div>
         </div>
     </div>
+    <script>
+
+    </script>
 {% endblock %}
