--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 
     <title>{{ title }}</title>
 </head>
-<body>
+<body style="word-wrap: break-word">
 {% block nav %}{% endblock %}
 {% block pitch %}{% endblock %}
 {% block login %}{% endblock %}
