--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -4,7 +4,8 @@
 {% endblock %}
 {% block main %}
     <div class="container" style="margin-top: 20px">
-        <div class="col-md-9">
+        <div class="row">
+            <div class="col-md-8">
 
                 <div class="panel-body">
                     <form role="form" method="post" action="">
@@ -20,11 +21,12 @@
                         </p>
                     </form>
                 </div>
+            </div>
         </div>
     </div>
     <script>
-    var editor = new Simditor({
-    textarea: $('#editor')
-    });
+        var editor = new Simditor({
+            textarea: $('#editor')
+        });
     </script>
 {% endblock %}
