--- a/templates/index.html
+++ b/templates/index.html
@@ -12,20 +12,11 @@
 
             <div class="list-group">
                 <div class="list-group-item">
-                    <span class="label label-danger" style="padding: 8px">信息学院</span>
+                    <span class="label label-warning" style="padding: 8px">信息学院</span>
                     <a href="/cs/" class="btn btn-success">计算机</a>
                     <a href="../test" class="btn btn-success">测试</a>
                 </div>
-                <div class="list-group-item">
-                    <span class="label label-danger" style="padding: 8px">信息学院</span>
-                    <a href="../cs" class="btn btn-success">计算机</a>
-                    <a href="../test" class="btn btn-success">测试</a>
-                </div>
-                <div class="list-group-item">
-                    <span class="label label-danger" style="padding: 8px">信息学院</span>
-                    <a href="../cs" class="btn btn-success">计算机</a>
-                    <a href="../test" class="btn btn-success">测试</a>
-                </div>
+
             </div>
             <div class="alert alert-warning" role="alert">
                 <p>将你的建议或发现的bug提交至<a href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">这里</a>，谢谢
