--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -24,28 +24,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <span style="font-size: 18px">排行榜</span>
+                        <span style="font-size: 18px">排行</span>
                     </div>
                     <div class="list-group">
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，pyth最近的主题，python标最近的主题，pyt最近的主题，pyth<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
 
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
-                        <a href="#" class="list-group-item">最近的主题，python标最近的主题，pyt最近的主题，python标最近的主题，pyt<span
-                                class="label label-info pull-right"
-                                style="padding: 4px">14</span></a>
                     </div>
                 </div>
             </div>
