--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content="dlpucsdn">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no" name="viewport">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <script rel="stylesheet" type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
