--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -10,6 +10,8 @@
         <p><input type="password" class="form-control" placeholder="密码" name="password"></p>
         <label id="lable"><input type="checkbox" value="remember-me"> Remember me</label>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+        <a class="btn btn-lg btn-warning btn-block" href="{% url 'signup' %}">注册</a>
+
     </form>
 </div>
 {% endblock %}
