--- a/templates/base.html
+++ b/templates/base.html
@@ -65,8 +65,8 @@
             &copy;dlpucsdn.com 2013-2014
         </div>
         <div>
-            <a href="https://www.digitalocean.com/"><img src="/static/images/DO.png"></a>
-            <a href="http://www.csdn.net/"><img src="/static/images/csdn.png"></a>
+            <a href="https://www.digitalocean.com/" target="_blank"><img src="/static/images/DO.png"></a>
+            <a href="http://www.csdn.net/" target="_blank"><img src="/static/images/csdn.png"></a>
 
         </div>
     </div>
