--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
             </div>
             <div class="alert alert-warning" role="alert">
-                <p>将你的建议或发现的bug提交至<a href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">这里</a>，谢谢
+                <p>将你的建议或发现的bug提交至<a href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">这里</a>，需要申请分区请联系作者。
                 </p>
             </div>
 
