--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -8,7 +8,7 @@
             <div class="col-md-8">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <span style="font-size: 18px">Hacker News</span>
+                        <span style="font-size: 18px">新闻</span>
                         <a href="{% url 'add_news' dn %}" class="btn btn-success btn-sm pull-right"
                            style="margin-top: -2px">Add</a>
                     </div>
