--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
             </div>
             <div class="alert alert-warning" role="alert">
-                <p>将你的建议或发现的bug提交至<a href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">这里</a>，需要申请分区请联系作者。
+                <p>dlpucsdn社区提供各专业内部之间的学科交流、作业查询和资源下载等功能，你可以在分区内发布自己感兴趣的话题，推荐使用谷歌或火狐浏览器，请将你的建议或发现的bug提交至<a href="https://github.com/tcitry/dlpucsdn/issues" target="_blank">这里</a>，需要申请分区请联系作者。
                 </p>
             </div>
 
