--- a/account/templates/account/user.html
+++ b/account/templates/account/user.html
@@ -1,22 +1,18 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'nav.html' %}{% endblock %}
+{% block nav %}{% include 'navuser.html' %}{% endblock %}
 {% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div>
-                        <p>用户名</p>
+                        <p>用户名{{ p.username }}</p>
 
-                        <p>邮箱</p>
 
-                        <p>学号</p>
+                        <p>学号{{ p.number }}</p>
 
-                        <p>身份</p>
+                        <p>{{ p.email }}</p>
 
-                        <p>主页</p>
-
-                        <p>自我介绍</p>
                     </div>
 
                 </div>
