--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,6 +4,11 @@
 {% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
+        {% if messages %}
+            {% for message in messages %}
+                <p class="alert alert-danger">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
             <div>
                 <div class="jumbotron" style="background-color: #99CC99;text-align: center">
                     <h2><a href="{% url 'write_blog' dn %}">Write the blog</a> , to be a better man</h2>
@@ -15,7 +20,7 @@
 
                     <p>{{ b.content | truncatechars_html:100 | safe}}</p>
 
-                    <div style="margin-top: -5px"><span><a id="count" href="" style="text-decoration: none">{{ b.auth }}</a></span><span> 发表于 {{ b.time_created | date }} </span><span>评论({{ b.reply_count }}) 点击({{ b.click }})</span></div>
+                    <div style="margin-top: -5px"><span><a id="count" href="{% url 'user_profile' b.auth.id %}" style="text-decoration: none">{{ b.auth }}</a></span><span> 发表于 {{ b.time_created | date }} </span><span>评论({{ b.reply_count }}) 点击({{ b.click }})</span></div>
                 </div>
             {% endfor %}
 
