--- a/blog/templates/blog/view.html
+++ b/blog/templates/blog/view.html
@@ -10,9 +10,8 @@
                         <div>
                             <div style="margin: 10px;width: 90%;border-bottom: 2px blueviolet solid">
                                 <h3 style="">{{ blog.title }}</h3>
-
                                 <div style="margin-top: 20px;padding-bottom: 10px">
-                                    <a href="" class="label label-primary" style="">{{ blog.auth }}</a>
+                                    <a href="{% url 'user_profile' blog.auth.id %}" class="label label-primary" style="">{{ blog.auth }}</a>
                                     <span class="label label-info">{{ blog.time_created | naturaltime }}</span> <span
                                         class="label label-default">点击({{ blog.click }}) </span> <span
                                         class="label label-default"
@@ -20,7 +19,7 @@
                                     {% if blog.auth == request.user %}
                                         <a href="" style="text-decoration: none"><span
                                                 class="label label-success">编辑</span></a>
-                                        <a href="" style="text-decoration: none"><span
+                                        <a href="{% url 'del_blog' dn blog_id %}" style="text-decoration: none"><span
                                                 class="label label-danger">delete</span></a>
                                     {% endif %}
                                 </div>
