--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -4,7 +4,8 @@
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8 col-md-offset-2">
 
-                <div class="panel-body">
+                {% if user.is_authenticated %}
+                    <div class="panel-body">
                     <form role="form" method="post" action="">
                         {% csrf_token %}
                         <p><input type="text" placeholder="标题" class="form-control" name="title"></p>
@@ -19,6 +20,9 @@
                         </p>
                     </form>
                 </div>
+                {% else %}
+                    请登录或注册
+                {% endif %}
         </div>
     </div>
     <script>
