--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -4,10 +4,16 @@
 {% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-danger">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
             <div class="panel panel-default ">
                 <div class="panel-heading">
                     <span style="font-size: 18px">主题</span>
-                    <a href="{% url 'create_topic' dn %}" class="btn btn-success btn-sm pull-right" style="margin-top: -2px">新话题</a>
+                    <a href="{% url 'create_topic' dn %}" class="btn btn-success btn-sm pull-right"
+                       style="margin-top: -2px">新话题</a>
                 </div>
                 <ul class="list-group">
                     {% for t in topics %}
@@ -21,7 +27,8 @@
                                 <div class="col-sm-8 col-xs-8 col-md-10" style="margin-left: 5px">
                                     <div><a style="font-size: 18px" href="{{ t.id }}">{{ t.title }}</a></div>
                                     <div style="margin-top: 10px">
-                                        <span ><a href="" style="text-decoration: none">{{ t.auth }} </a></span><span>创建于</span><span>{{ t.time_created | naturaltime }} </span><span>有({{ t.reply_count }})条评论</span>
+                                        <span><a href="{% url 'user_profile' t.auth.id %}"
+                                                 style="text-decoration: none">{{ t.auth }} </a></span><span>创建于</span><span>{{ t.time_created | naturaltime }} </span><span>有({{ t.reply_count }})条评论</span>
                                     </div>
                                 </div>
                                 <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
