--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -6,14 +6,11 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="list-group">
-
                     <div class="list-group-item">
-
                         <div class="row">
                             <div class="col-md-11 col-sm-10 col-xs-10">
                                 <div class="text-info"
                                      style="font-size: 25px;border-bottom: 1px #dcdcdc solid;padding-bottom: 10px">{{ topics.title }}</div>
-
                             </div>
                             <div class="pull-right" style="margin-right: 10px">
                                 <a href="">
@@ -23,24 +20,21 @@
                             </div>
                         </div>
                         <div style="margin-top: 10px;font-size: 16px">{{ topics.content | safe }}</div>
-
                         <div style="margin-top: 30px">
-                            <a href="" class="label label-primary" style="">{{ topics.auth }}</a>
+                            <a href="{% url 'user_profile' topics.auth.id %}" class="label label-primary"
+                               style="">{{ topics.auth }}</a>
                             <span class="label label-info">{{ topics.time_created | naturaltime }}</span> <span
                                 class="label label-default">点击({{ topics.click }}) </span> <span
                                 class="label label-default" style="margin-left: 5px">评论({{ topics.reply_count }})</span>
                             {% if topics.auth == request.user %}
                                 <a href="" style="text-decoration: none"><span
-                                                class="label label-success">编辑</span></a>
+                                        class="label label-success">附加</span></a>
                                 <a href="{% url 'del_topic' dn topics.id %}" style="text-decoration: none"><span
                                         class="label label-danger">delete</span></a>
                             {% endif %}
                         </div>
-
                     </div>
                 </div>
-
-
                 <div class="panel panel-default ">
                     <div class="panel-heading">
                         <span style="font-size: 18px">共有{{ topics.reply_count }}条回复</span>
@@ -58,13 +52,17 @@
                                     <div class="col-sm-9 col-xs-9 col-md-10" style="margin-left: 5px;margin-top: 10px">
                                         {{ r.content | safe }}
                                         <div style="margin-top: 30px">
-                                            <span id="count"><a href="{{ r.auth }}">{{ r.auth }}</a></span><span
+                                            <span></span>
+                                            <span id="count"><a
+                                                    href="{% url 'user_profile' r.auth.id %}">{{ r.auth }}</a></span><span
                                                 id="count"
                                                 style="margin-left: 5px">{{ r.time_created | naturaltime }}</span>
                                         </div>
                                     </div>
                                     <div class="pull-right" style="margin-right: 10px;margin-top: 10px">
-                                        <label id="count">{{ r.id }}</label>
+                                        <a class="label label-info reply-btn" data-user="{{ r.auth.username }}"
+                                           data-url="{% url 'user_profile' r.auth.id %}"
+                                           href="#content">reply</a>
                                     </div>
                                 </div>
                             </div>
@@ -72,13 +70,16 @@
 
                     </ul>
                 </div>
-                <div class="list-group">
-                    <form role="form" method="post" action="{% url 'create_reply' dn topic_id %}">
-                        {% csrf_token %}
-                        <textarea placeholder="评论" name="reply" class="form-control" id="editor"></textarea>
-                        <button class="btn btn-success pull-right" type="submit" style="margin-top: 10px">提交</button>
-                    </form>
-                </div>
+                {% if user.is_authenticated %}
+                    <div class="list-group" id="content">
+                        <form role="form" method="post" action="{% url 'create_reply' dn topic_id %}">
+                            {% csrf_token %}
+                            <textarea placeholder="评论" name="reply" class="form-control" id="editor"></textarea>
+                            <button class="btn btn-success pull-right" type="submit" style="margin-top: 10px">提交
+                            </button>
+                        </form>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -86,5 +87,13 @@
         var editor = new Simditor({
             textarea: $('#editor')
         });
+        $('.reply-btn').click(
+                function () {
+                    var user = $(this).data('user');
+                    var profile = $(this).data('url');
+                    console.log(user);
+                    editor.setValue('<a href="' + profile + '">' + '@' + user + '&nbsp');
+                }
+        );
     </script>
 {% endblock %}
