--- a/account/templates/account/teacher-signup.html
+++ b/account/templates/account/teacher-signup.html
@@ -26,6 +26,10 @@
 
             <p><input type="password" class="form-control" placeholder="确认密码" name="password2"></p>
             <button class="btn btn-lg btn-primary btn-block" type="submit">教师注册</button>
+            <p>
+
+            <div class="alert alert-danger">填写完邮箱地址后我们会发送一个链接到您的邮箱，打开链接后便可使用作业发布功能</div>
+            </p>
         </form>
     </div>
 {% endblock %}
