--- a/account/templates/account/teacher-signup.html
+++ b/account/templates/account/teacher-signup.html
@@ -17,7 +17,7 @@
             <p>
 
             <div class="input-group">
-                <input class="form-control" type="text" placeholder="Email" name="email">
+                <input class="form-control" type="text" placeholder="邮箱" name="email">
 
                 <div class="input-group-addon">@dlpu.edu.cn</div>
             </div>
