--- a/account/templates/account/user.html
+++ b/account/templates/account/user.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block nav %}{% include 'navuser.html' %}{% endblock %}
+{% block nav %}{% include 'nav.html' %}{% endblock %}
 {% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="col-md-8">
@@ -8,15 +8,12 @@
                     <div>
                         <p>用户名{{ p.username }}</p>
 
-
                         <p>学号{{ p.number }}</p>
 
                         <p>{{ p.email }}</p>
-
                     </div>
 
                 </div>
-
             </div>
             <div class="panel panel-default">
                 <div class="panel-body">
