--- a/blog/templates/blog/view.html
+++ b/blog/templates/blog/view.html
@@ -4,7 +4,13 @@
 {% block main %}
     <div class="container" style="margin-top: 20px">
         <div class="row">
+
             <div class="col-md-offset-2 col-md-8">
+             {% if messages %}
+            {% for message in messages %}
+                <p class="alert alert-danger">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
                 <div class="panel panel-default ">
                     <div class="panel-body">
                         <div>
