--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -6,6 +6,11 @@
     <div class="container" style="margin-top: 20px">
         <div class="row">
             <div class="col-md-8">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
                 {% if user.is_authenticated %}
                     <div class="panel-body">
                         <form role="form" method="post" action="">
