--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block main %}
+<div style="text-align: center">
     <h1>404</h1>
-    <p><a href="dlpucsdn.com">回到首页</a></p>
-{% endblock %}
+    <p><a href="{% url 'index' %}">回到首页</a></p>
+</div>
