--- a/templates/500.html
+++ b/templates/500.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-    "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <title>Page unavailable</title>
-</head>
-<body>
-    <h1>Page unavailable</h1>
-
-    <p>Sorry, but the requested page is unavailable due to a
-    server hiccup.</p>
-
-    <p>Our engineers have been notified, so check back later.</p>
-</body>
-</html>
+<div style="text-align: center">
+    <h1>500</h1>
+    <p><a href="{% url 'index' %}">回到首页</a></p>
+</div>
