--- a/assignment/templates/assignment/index.html
+++ b/assignment/templates/assignment/index.html
@@ -6,7 +6,7 @@
     <div class="container" style="margin-top: 20px">
         <div class="col-md-4">
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading" style="background-color: #C6E5E9">
                     选择专业和课程
                 </div>
                 <div class="list-group">
@@ -31,7 +31,7 @@
                                 <option>计算机</option>
                             </select>
                             <br>
-                            <input type="submit" value="确定" class="btn btn-success col-md-offset-10">
+                            <input type="submit" value="确定" class="btn col-md-offset-10" style="background-color: #5bc0de;color: #ffffff">
                             <br>
                         </form>
                     </div>
@@ -43,8 +43,8 @@
                         <p>教师推荐网络课程，学习建议路线</p>
                     </div>
                     <div class="list-group-item" style="text-align: center">
-                        <a href="{% url 'issue' %}" class="btn btn-danger"
-                           style="width: 80%;">教师发布入口</a>
+                        <a href="{% url 'issue' %}" class="btn"
+                           style="width: 80%;background-color: #D73C31;color: #ffffff">教师发布入口</a>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                         </h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 60%;">
+                                 aria-valuemax="100" style="width: 60%;background-color: #85d9f2">
                                 60%
                             </div>
                         </div>
