--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,7 +10,7 @@
             {% endfor %}
         {% endif %}
             <div>
-                <div class="jumbotron" style="background-color: #99CC99;text-align: center">
+                <div class="jumbotron" style="background-color: #C6E5E9;text-align: center">
                     <h2><a href="{% url 'write_blog' dn %}">Write the blog</a> , to be a better man</h2>
                 </div>
             </div>
