--- a/blog/templates/blog/view.html
+++ b/blog/templates/blog/view.html
@@ -45,11 +45,11 @@
                             <div class="list-group-item">
                                 <div class="row">
                                     <a href="" class="col-sm-1 col-xs-2 col-md-1">
-                                        <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
+                                        <img src="/static/images/default.png" height="50px" width="50px"
                                              class="img-circle">
                                     </a>
 
-                                    <div class="col-sm-10 col-xs-9 col-md-10" style="margin-left: 5px;margin-top: 10px">
+                                    <div class="col-sm-10 col-xs-9 col-md-10" style="margin-left: 5px;margin-top: 10px;">
                                         {{ br.content | safe }}
                                         <div style="margin-top: 30px">
                                             <span id="count"><a href="">{{ br.auth }}</a></span><span
