--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4517,7 +4517,8 @@ a.label:focus {
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  background-color: #777;
+  /*background-color: #777;*/
+    background-color: #D73C31;
   border-radius: 10px;
 }
 .badge:empty {
