--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
     <title>{{ title }}</title>
 </head>
-<body style="word-wrap: break-word">
+<body style="word-wrap: break-word;background-color: #F0F0F0">
 {% block nav %}{% endblock %}
 {% block pitch %}{% endblock %}
 {% block login %}{% endblock %}
