--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
-    <div class="container" style="margin-top: 20px">
+    <div class="container" style="margin-top: 20px;">
         <div class="row">
             <div class="col-md-8">
                 <div class="list-group">
@@ -14,7 +14,7 @@
                             </div>
                             <div class="pull-right" style="margin-right: 10px">
                                 <a href="">
-                                    <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
+                                    <img src="/static/images/default.png" height="50px" width="50px"
                                          class="img-circle">
                                 </a>
                             </div>
@@ -44,8 +44,8 @@
                         {% for r in reply %}
                             <div class="list-group-item">
                                 <div class="row">
-                                    <a href="" class="col-sm-2 col-xs-2 col-md-1">
-                                        <img src="../static/images/pitch/bg.jpg" height="50px" width="50px"
+                                    <a href="{% url 'user_profile' r.auth.id %}" class="col-sm-2 col-xs-2 col-md-1">
+                                        <img src="/static/images/default.png" height="50px" width="50px"
                                              class="img-circle">
                                     </a>
 
