--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -7,10 +7,10 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" style="background-color: #C6E5E9">
                         <span style="font-size: 18px">新闻</span>
-                        <a href="{% url 'add_news' dn %}" class="btn btn-success btn-sm pull-right"
-                           style="margin-top: -2px">Add</a>
+                        <a href="{% url 'add_news' dn %}" class="btn btn-sm pull-right"
+                           style="margin-top: -2px;background-color: #D73C31;color: #ffffff">Add</a>
                     </div>
                     <div class="list-group">
                         {% for n in news %}
