--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{% url 'index' %}" class="navbar-brand">DlpuCsdn</a>
+            <a href="{% url 'index' %}" style="font-size: 20;color: #5bc0de" class="navbar-brand" ><span>Dlpu</span><span style="color: #D73C31">C</span>sdn</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" id="top" role="navigation">
             <ul class="nav navbar-nav">
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                     <li class="">
-                        <a href="{% url 'user_profile' user.id %}">{{ user.username }} <span class="badge">42</span></a>
+                        <a style="color: #5bc0de;" href="{% url 'user_profile' user.id %}">{{ user.username }} <span class="badge">42</span></a>
                     </li>
                     <li class="">
                         <a href="{% url 'logout' %}"><img src="/static/images/logout.png"></a>
