--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,12 +15,12 @@
                 <li class=""><a href="{% url 'news_index' dn %}">{{ department }}</a></li>
                 <li class=""><a href="{% url 'forum_index' dn %}">论坛</a></li>
                 <li class=""><a href="{% url 'blog_index' dn %}">博客</a></li>
-{#                <li class=""><a href="{% url 'research_index' dn %}">科研</a></li>#}
+                <li class=""><a href="{% url 'research_index' dn %}">科研</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                     <li class="">
-                        <a href="{% url 'user_profile' user.id %}">{{ user.username }} <span class="badge">42</span></a>
+                        <a style="color:#5bc0de;" href="{% url 'user_profile' user.id %}">{{ user.username }} <span class="badge">42</span></a>
                     </li>
                     <li class="">
                         <a href="{% url 'logout' %}"><img src="/static/images/logout.png"></a>
