--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 <div class="list-group-item">
                     <span class="label label-warning" style="padding: 8px">信息学院</span>
                     <a href="/cs/" class="btn btn-success">计算机</a>
-                    <a href="../test" class="btn btn-success">测试</a>
+                    <a href="/au/" class="btn btn-success">自动化</a>
                 </div>
 
             </div>
