--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content="dlpucsdn">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no" name="viewport">
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0, user-scalable=no" name="viewport">#}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}"/>
@@ -57,7 +57,6 @@
         <div style="margin-bottom: 10px">
             <a href="{% url 'about' %}">关于我们</a>
             <a href="https://github.com/tcitry" target="_blank" style="margin-left: 10px;margin-right: 10px">联系作者</a>
-            <a href="http://csdn.net" target="_blank">Csdn.net</a>
         </div>
         <div >
             &copy;dlpucsdn.com 2013-2014
