--- a/uploader/templates/uploader/src.html
+++ b/uploader/templates/uploader/src.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
 {% block nav %}{% include 'nav.html' %}{% endblock %}
 {% block main %}
-    <p>
-    hello uploader
-    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <form method="post" action="http://upload.qiniu.com/" enctype="multipart/form-data">
+                    <input name="key" type="hidden" value="">
+                    <input name="" type="hidden" value="">
+                    <input name="token" type="hidden" value="{{ token }}">
+                    <input name="file" type="file"/>
+                    <input name="accept" type="hidden"/>
+                    <input type="submit" value="提交">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
