--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
     <div class="container" style="margin-top: 20px">
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-8 col-sm-8">
         {% if messages %}
             {% for message in messages %}
                 <p class="alert alert-danger">{{ message }}</p>
@@ -25,7 +25,7 @@
             {% endfor %}
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
             <div class="panel panel-default ">
                 <div class="panel-heading">
                     标签
