--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,20 @@
                     <div class="alert alert-success">{{ message }}</div>
                 {% endfor %}
             {% endif %}
+            <div class="panel panel-default">
+                <div class="panel-heading"  style="background-color: #C6E5E9">
+                    社区
+                </div>
+                <div class="list-group">
 
-            <div class="list-group">
-                <div class="list-group-item">
-                    <span class="label label-warning" style="padding: 8px">信息学院</span>
-                    <a href="/cs/" class="btn btn-success">计算机</a>
-                    <a href="/au/" class="btn btn-success">自动化</a>
+                    <div class="list-group-item">
+                        <span class="label btn-blue" style="padding: 8px;">信息学院</span>
+                        <a href="/cs/" class="btn btn-red">计算机</a>
+                        <a href="/au/" class="btn btn-red">自动化</a>
+                    </div>
+
+
+
                 </div>
 
             </div>
